--- a/B.html
+++ b/B.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Your Name] - Professional Profile</title>
-    <link rel="Bcssheet" href="Bcss.css">
+    <!-- Corrected the rel attribute -->
+    <link rel="stylesheet" href="Bcss.css">
 </head>
 <body>
     <header>
